# solana-project

./: .env.template  .gitignore  .prettierrc.yml  .rustfmt.toml  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
libs/security_info/: Cargo.toml
libs/security_info/src/: lib.rs
misc/: types.ts  utils.ts
programs/program1/: Cargo.toml
programs/program1/src/: lib.rs
programs/program1/src/state/: accounts.rs  leaf_payload.rs  mod.rs
programs/program2/: Cargo.toml
programs/program2/src/: lib.rs
programs/solana-project/: Cargo.toml
programs/solana-project/src/: lib.rs
res/merkle-data/source/: epoch_12.csv
scripts/: addValue.ts  getTransaction.ts  getValue.ts  initialize.ts  program1AddValue.ts  program1CreateAtaAccount.ts  program1CreateToken.ts  program1GetValue.ts  program1Initialize.ts  program1MintTokens.ts  program1ResetValue.ts  program1TransferTokens.ts  program1UpdateValue.ts  program2BurnAccount.ts  program2CallTransferTokens.ts  program2CreateAccount.ts  transactionLogs.ts  updateSecurityTxt.ts  updateValue.ts
scripts/merkle-tree/: program1BuildMerkleTree.ts  program1CreateEpoch.ts  program1VerifyMerkleTree.ts
scripts/vault/: program2CreateVault.ts  program2DepositVault.ts  program2WithdrawVault.ts
tests/: program1.spec.ts  solana-project.ts
