[package]
name = "program1"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program1"

[features]
default = []
anchor-debug = []
no-idl = []
no-log-ix-name = []
custom-panic = []
custom-heap = []
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = "0.32.0"
sha3 = "0.10.8"
hex = "0.4"
ethabi = "18.0.0"
security_info = { path = "../../libs/security_info" }

