[package]
name = "program2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program2"

[features]
default = []
anchor-debug = []
no-idl = []
no-log-ix-name = []
no-entrypoint = []
custom-panic = []
custom-heap = []
cpi = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1" }
anchor-spl = "0.31.1"
program1 = { path = "../program1", features = ["cpi"] }
