[package]
name = "program2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program2"

[features]
default = []
anchor-debug = []
no-idl = []
no-log-ix-name = []
custom-panic = []
custom-heap = []
no-entrypoint = []
cpi = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.0" }
anchor-spl = "0.32.0"
program1 = { path = "../program1", features = ["cpi"] }
security_info = { path = "../../libs/security_info" }

